<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:showDividers="middle|beginning|end"
        android:divider="@drawable/empty_tall_divider">

        <TextView
            android:id="@+id/textView"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="421dp"
            android:layout_height="74dp"
            android:autoSizeTextType="uniform"
            android:background="#FFEB3B"
            android:text="@string/text_main_activity"
            android:textColor="#FF6E40"
            android:textSize="33sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/learn_animals"
                android:src="@drawable/elephant"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image2"
                android:src="@drawable/questionmark"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image3"
                android:src="@drawable/imganimal_1"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <Button
            android:id="@+id/animalbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goAnimalActivity"
            android:text="@string/learn_animals"
            android:textStyle="italic"
            app:icon="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/colorbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goColorsActivity"
            android:text="@string/learn_color"
            android:textStyle="italic"
            app:icon="@android:drawable/btn_star_big_on"
            app:iconPadding="10dp" />

        <Button
            android:id="@+id/exercisesbuton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goExercisesActivity"
            android:text="@string/exercises"
            android:textStyle="italic"
            app:icon="@android:drawable/btn_star_big_on" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>